--- a/index.html
+++ b/index.html
@@ -44,10 +44,6 @@ h2{
     border-radius:16px;
     overflow:hidden;
     box-shadow:0 10px 25px rgba(0,0,0,0.1);
-    transition:transform .3s;
-}
-.card:hover{
-    transform:translateY(-6px);
 }
 .card img{
     width:100%;
@@ -56,10 +52,6 @@ h2{
 }
 .content{
     padding:16px;
-}
-.content h3{
-    margin:0 0 8px;
-    font-size:17px;
 }
 .price{
     font-weight:bold;
@@ -80,7 +72,6 @@ footer{
     color:white;
     text-align:center;
     padding:25px;
-    margin-top:40px;
 }
 </style>
 </head>
@@ -93,70 +84,111 @@ footer{
 <p>📞 WhatsApp : <strong>+226 76 59 97 01</strong></p>
 </header>
 
-<!-- ROMANS -->
 <section>
-<h2>📖 Romans & Littérature</h2>
+<h2>📖 Romans</h2>
 <div class="grid">
 
 <div class="card">
-<img src="images/maimouna.jpg" alt="Maimouna">
+<img src="images/maimouna.jpg.jpg">
 <div class="content">
 <h3>Maimouna</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Maimouna%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Maimouna">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/etranger_albert_camus.jpg" alt="L'Étranger">
+<img src="images/etranger_albert_camus.jpg.jpg">
 <div class="content">
 <h3>L’Étranger – Albert Camus</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L'Étranger%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20L%27Étranger">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/le-petit-prince.jpg" alt="Le Petit Prince">
+<img src="images/l-aventure_albaraka_i.jpg.jpg">
+<div class="content">
+<h3>L’aventure Albaraka I</h3>
+<p class="price">1500 FCFA</p>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20I">Commander</a>
+</div>
+</div>
+
+<div class="card">
+<img src="images/l-aventure_albaraka_ii.jpg.jpg">
+<div class="content">
+<h3>L’aventure Albaraka II</h3>
+<p class="price">1500 FCFA</p>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20II">Commander</a>
+</div>
+</div>
+
+<div class="card">
+<img src="images/lenfant_noir.jpg.jpg">
+<div class="content">
+<h3>L’Enfant noir</h3>
+<p class="price">1500 FCFA</p>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Enfant%20noir">Commander</a>
+</div>
+</div>
+
+<div class="card">
+<img src="images/soleil_des_independances.jpg.jpg">
+<div class="content">
+<h3>Soleil des indépendances</h3>
+<p class="price">1500 FCFA</p>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Soleil%20des%20indépendances">Commander</a>
+</div>
+</div>
+
+<div class="card">
+<img src="images/crepuscule_des_temps_anciens.jpg.jpg">
+<div class="content">
+<h3>Crépuscule des temps anciens</h3>
+<p class="price">1500 FCFA</p>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Crépuscule">Commander</a>
+</div>
+</div>
+
+<div class="card">
+<img src="images/le_petit_prince.jpg.jpg">
 <div class="content">
 <h3>Le Petit Prince</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Le%20Petit%20Prince%20-%202000%20FCFA">Commander</a>
-</div>
-</div>
-
-<div class="card">
-<img src="images/une-si-longue-lettre.jpg" alt="Une si longue lettre">
-<div class="content">
-<h3>Une si longue lettre</h3>
-<p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Une%20si%20longue%20lettre%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Petit%20Prince">Commander</a>
 </div>
 </div>
 
 </div>
 </section>
 
-<!-- DÉVELOPPEMENT PERSONNEL -->
 <section>
 <h2>🧠 Développement personnel</h2>
 <div class="grid">
 
 <div class="card">
-<img src="images/pere-riche.jpg" alt="Père riche père pauvre">
+<img src="images/lart_de_la_guerre.jpg.png">
 <div class="content">
-<h3>Père riche père pauvre</h3>
+<h3>L’art de la guerre</h3>
 <p class="price">3000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Père%20riche%20père%20pauvre%20-%203000%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Art%20de%20la%20guerre">Commander</a>
 </div>
 </div>
 
+</div>
+</section>
+
+<section>
+<h2>📘 Manuels</h2>
+<div class="grid">
+
 <div class="card">
-<img src="images/influence-manipulation.jpg" alt="Influence et manipulation">
+<img src="images/l_essentiel_en_cm.jpg.png">
 <div class="content">
-<h3>Influence et manipulation</h3>
-<p class="price">3000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Influence%20et%20manipulation%20-%203000%20FCFA">Commander</a>
+<h3>L’essentiel en CM</h3>
+<p class="price">2000 FCFA</p>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Essentiel%20CM">Commander</a>
 </div>
 </div>
 
