--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@ h2{
     width:100%;
     height:260px;
     object-fit:cover;
+    background:#e5e7eb;
 }
 .content{
     padding:16px;
+}
+.content h3{
+    margin:0 0 8px;
 }
 .price{
     font-weight:bold;
@@ -84,111 +88,114 @@ footer{
 <p>📞 WhatsApp : <strong>+226 76 59 97 01</strong></p>
 </header>
 
+<!-- ROMANS -->
 <section>
 <h2>📖 Romans</h2>
 <div class="grid">
 
 <div class="card">
-<img src="images/maimouna.jpg.jpg">
+<img src="images/maimouna.jpg.jpg" alt="Maimouna" loading="lazy">
 <div class="content">
 <h3>Maimouna</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Maimouna">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Maimouna%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/etranger_albert_camus.jpg.jpg">
+<img src="images/etranger_albert_camus.jpg.jpg" alt="L'Etranger - Albert Camus" loading="lazy">
 <div class="content">
 <h3>L’Étranger – Albert Camus</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20L%27Étranger">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20L%20Etranger%20Albert%20Camus%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/l-aventure_albaraka_i.jpg.jpg">
+<img src="images/l-aventure_albaraka_i.jpg.jpg" alt="L'aventure Albaraka I" loading="lazy">
 <div class="content">
 <h3>L’aventure Albaraka I</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20I">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20I%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/l-aventure_albaraka_ii.jpg.jpg">
+<img src="images/l-aventure_albaraka_ii.jpg.jpg" alt="L'aventure Albaraka II" loading="lazy">
 <div class="content">
 <h3>L’aventure Albaraka II</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20II">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20II%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/lenfant_noir.jpg.jpg">
+<img src="images/lenfant_noir.jpg.jpg" alt="L'Enfant noir" loading="lazy">
 <div class="content">
 <h3>L’Enfant noir</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Enfant%20noir">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Enfant%20noir%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/soleil_des_independances.jpg.jpg">
+<img src="images/soleil_des_independances.jpg.jpg" alt="Soleil des independances" loading="lazy">
 <div class="content">
 <h3>Soleil des indépendances</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Soleil%20des%20indépendances">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Soleil%20des%20independances%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/crepuscule_des_temps_anciens.jpg.jpg">
+<img src="images/crepuscule_des_temps_anciens.jpg.jpg" alt="Crepuscule des temps anciens" loading="lazy">
 <div class="content">
 <h3>Crépuscule des temps anciens</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Crépuscule">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Crepuscule%20des%20temps%20anciens%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/le_petit_prince.jpg.jpg">
+<img src="images/le_petit_prince.jpg.jpg" alt="Le Petit Prince" loading="lazy">
 <div class="content">
 <h3>Le Petit Prince</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Petit%20Prince">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Petit%20Prince%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
 
 </div>
 </section>
 
+<!-- DEVELOPPEMENT PERSONNEL -->
 <section>
 <h2>🧠 Développement personnel</h2>
 <div class="grid">
 
 <div class="card">
-<img src="images/lart_de_la_guerre.jpg.png">
+<img src="images/lart_de_la_guerre.jpg.png" alt="L'art de la guerre" loading="lazy">
 <div class="content">
 <h3>L’art de la guerre</h3>
 <p class="price">3000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Art%20de%20la%20guerre">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Art%20de%20la%20guerre%20-%203000%20FCFA">Commander</a>
 </div>
 </div>
 
 </div>
 </section>
 
+<!-- MANUELS -->
 <section>
 <h2>📘 Manuels</h2>
 <div class="grid">
 
 <div class="card">
-<img src="images/l_essentiel_en_cm.jpg.png">
+<img src="images/l_essentiel_en_cm.jpg.png" alt="L'essentiel en CM" loading="lazy">
 <div class="content">
 <h3>L’essentiel en CM</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Essentiel%20CM">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Commande%20Essentiel%20en%20CM%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
 
