--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ h2{
 .content{
     padding:16px;
 }
+.content h3{
+    margin:0 0 8px;
+}
 .price{
     font-weight:bold;
     margin-bottom:12px;
@@ -94,7 +97,7 @@ footer{
 <div class="content">
 <h3>Maimouna</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Maimouna">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Maimouna%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -103,34 +106,34 @@ footer{
 <div class="content">
 <h3>L’Étranger – Albert Camus</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20L%27Étranger">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L’Étranger%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/l'aventure_albaraka_i.jpg.jpg" alt="L'aventure Albaraka I">
+<img src="images/l-aventure_albaraka_i.jpg.jpg" alt="L’aventure Albaraka I">
 <div class="content">
 <h3>L’aventure Albaraka I</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20I">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L’aventure%20Albaraka%20I%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/l'aventure_albaraka_ii.jpg.jpg" alt="L'aventure Albaraka II">
+<img src="images/l-aventure_albaraka_ii.jpg.jpg" alt="L’aventure Albaraka II">
 <div class="content">
 <h3>L’aventure Albaraka II</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20II">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L’aventure%20Albaraka%20II%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/lenfant_noir.jpg.jpg" alt="L'Enfant noir">
+<img src="images/lenfant_noir.jpg.jpg" alt="L’Enfant noir">
 <div class="content">
 <h3>L’Enfant noir</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Enfant%20noir">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L’Enfant%20noir%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -139,7 +142,7 @@ footer{
 <div class="content">
 <h3>Soleil des indépendances</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Soleil%20des%20indépendances">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Soleil%20des%20indépendances%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -148,7 +151,7 @@ footer{
 <div class="content">
 <h3>Crépuscule des temps anciens</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Crépuscule">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Crépuscule%20des%20temps%20anciens%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -157,24 +160,24 @@ footer{
 <div class="content">
 <h3>Le Petit Prince</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Petit%20Prince">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Le%20Petit%20Prince%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
 
 </div>
 </section>
 
-<!-- DÉVELOPPEMENT PERSONNEL -->
+<!-- DÉVELOPPEMENT -->
 <section>
 <h2>🧠 Développement personnel</h2>
 <div class="grid">
 
 <div class="card">
-<img src="images/lart_de_la_guerre.jpg.png" alt="L'art de la guerre">
+<img src="images/lart_de_la_guerre.jpg.png" alt="L’art de la guerre">
 <div class="content">
 <h3>L’art de la guerre</h3>
 <p class="price">3000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Art%20de%20la%20guerre">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L’art%20de%20la%20guerre%20-%203000%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -187,11 +190,11 @@ footer{
 <div class="grid">
 
 <div class="card">
-<img src="images/l'essentiel_en_cm.jpg.png" alt="L'essentiel en CM">
+<img src="images/l_essentiel_en_cm.jpg.png" alt="L’essentiel en CM">
 <div class="content">
 <h3>L’essentiel en CM</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Essentiel%20CM">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L’essentiel%20en%20CM%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
 
