--- a/index.html
+++ b/index.html
@@ -17,20 +17,10 @@ header{
     padding:50px 20px;
     text-align:center;
 }
-header h1{
-    margin:0;
-    font-size:34px;
-}
-header p{
-    margin:10px 0;
-    opacity:0.9;
-}
 section{
     padding:40px 20px;
 }
 h2{
-    margin-bottom:20px;
-    color:#111;
     border-left:6px solid #22c55e;
     padding-left:12px;
 }
@@ -80,11 +70,9 @@ footer{
 
 <header>
 <h1>Librairie le Cercle des Idées</h1>
-<p>Romans • Manuels • Développement personnel</p>
 <p>📞 WhatsApp : <strong>+226 76 59 97 01</strong></p>
 </header>
 
-<!-- ROMANS -->
 <section>
 <h2>📖 Romans</h2>
 <div class="grid">
@@ -94,7 +82,7 @@ footer{
 <div class="content">
 <h3>Maimouna</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Maimouna">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Maimouna%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -103,25 +91,25 @@ footer{
 <div class="content">
 <h3>L’Étranger – Albert Camus</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20L%27Étranger">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%27Étranger%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/l'aventure_albaraka_i.jpg.jpg" alt="L'aventure Albaraka I">
+<img src="images/l-aventure_albaraka_i.jpg.jpg" alt="Albaraka I">
 <div class="content">
 <h3>L’aventure Albaraka I</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20I">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%27aventure%20Albaraka%20I%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/l'aventure_albaraka_ii.jpg.jpg" alt="L'aventure Albaraka II">
+<img src="images/l-aventure_albaraka_ii.jpg.jpg" alt="Albaraka II">
 <div class="content">
 <h3>L’aventure Albaraka II</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Albaraka%20II">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%27aventure%20Albaraka%20II%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -130,7 +118,7 @@ footer{
 <div class="content">
 <h3>L’Enfant noir</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Enfant%20noir">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%27Enfant%20noir%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -139,16 +127,16 @@ footer{
 <div class="content">
 <h3>Soleil des indépendances</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Soleil%20des%20indépendances">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Soleil%20des%20ind%C3%A9pendances%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/crepuscule_des_temps_anciens.jpg.jpg" alt="Crépuscule des temps anciens">
+<img src="images/crepuscule_des_temps_anciens.jpg.jpg" alt="Crépuscule">
 <div class="content">
 <h3>Crépuscule des temps anciens</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Crépuscule">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Cr%C3%A9puscule%20des%20temps%20anciens%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
@@ -157,41 +145,23 @@ footer{
 <div class="content">
 <h3>Le Petit Prince</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Petit%20Prince">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Le%20Petit%20Prince%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
 
 </div>
 </section>
 
-<!-- DÉVELOPPEMENT PERSONNEL -->
-<section>
-<h2>🧠 Développement personnel</h2>
-<div class="grid">
-
-<div class="card">
-<img src="images/lart_de_la_guerre.jpg.png" alt="L'art de la guerre">
-<div class="content">
-<h3>L’art de la guerre</h3>
-<p class="price">3000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Art%20de%20la%20guerre">Commander</a>
-</div>
-</div>
-
-</div>
-</section>
-
-<!-- MANUELS -->
 <section>
 <h2>📘 Manuels</h2>
 <div class="grid">
 
 <div class="card">
-<img src="images/l'essentiel_en_cm.jpg.png" alt="L'essentiel en CM">
+<img src="images/l_essentiel_en_cm.jpg.png" alt="Essentiel CM">
 <div class="content">
 <h3>L’essentiel en CM</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Commande%20Essentiel%20CM">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%27essentiel%20en%20CM%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
 
