--- a/index.html
+++ b/index.html
@@ -17,20 +17,10 @@ header{
     padding:50px 20px;
     text-align:center;
 }
-header h1{
-    margin:0;
-    font-size:34px;
-}
-header p{
-    margin:10px 0;
-    opacity:0.9;
-}
 section{
     padding:40px 20px;
 }
 h2{
-    margin-bottom:20px;
-    color:#111;
     border-left:6px solid #22c55e;
     padding-left:12px;
 }
@@ -53,13 +43,8 @@ h2{
 .content{
     padding:16px;
 }
-.content h3{
-    margin:0 0 8px;
-    font-size:17px;
-}
 .price{
     font-weight:bold;
-    margin-bottom:12px;
 }
 .btn{
     display:block;
@@ -94,94 +79,92 @@ footer{
 <div class="grid">
 
 <div class="card">
-<img src="images/maimouna.jpg.jpg" alt="Maimouna">
+<img src="images/maimouna.jpg.jpg">
 <div class="content">
 <h3>Maimouna</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Maimouna%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Maimouna%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/etranger_albert_camus.jpg.jpg" alt="L'Étranger">
+<img src="images/etranger_albert_camus.jpg.jpg">
 <div class="content">
 <h3>L’Étranger – Albert Camus</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L%E2%80%99%C3%89tranger%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%E2%80%99%C3%89tranger%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/laventure_albaraka_i.jpg" alt="L’aventure Albaraka I">
+<img src="images/laventure_albaraka_i.jpg">
 <div class="content">
 <h3>L’aventure Albaraka I</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L%E2%80%99aventure%20Albaraka%20I%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%E2%80%99aventure%20Albaraka%20I%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/l-aventure_albaraka_ii.jpg.jpg" alt="L’aventure Albaraka II">
+<img src="images/l-aventure_albaraka_ii.jpg.jpg">
 <div class="content">
 <h3>L’aventure Albaraka II</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L%E2%80%99aventure%20Albaraka%20II%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%E2%80%99aventure%20Albaraka%20II%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/lenfant_noir.jpg.jpg" alt="L’Enfant noir">
+<img src="images/lenfant_noir.jpg.jpg">
 <div class="content">
 <h3>L’Enfant noir</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L%E2%80%99Enfant%20noir%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%E2%80%99Enfant%20noir%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/soleil_des_independances.jpg.jpg" alt="Soleil des indépendances">
+<img src="images/soleil_des_independances.jpg.jpg">
 <div class="content">
 <h3>Soleil des indépendances</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Soleil%20des%20ind%C3%A9pendances%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Soleil%20des%20ind%C3%A9pendances%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/crepuscule_des_temps_anciens.jpg.jpg" alt="Crépuscule des temps anciens">
+<img src="images/crepuscule_des_temps_anciens.jpg.jpg">
 <div class="content">
 <h3>Crépuscule des temps anciens</h3>
 <p class="price">1500 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Cr%C3%A9puscule%20des%20temps%20anciens%20-%201500%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Cr%C3%A9puscule%20des%20temps%20anciens%20-%201500%20FCFA">Commander</a>
 </div>
 </div>
 
 <div class="card">
-<img src="images/le_petit_prince.jpg.jpg" alt="Le Petit Prince">
+<img src="images/le_petit_prince.jpg.jpg">
 <div class="content">
 <h3>Le Petit Prince</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20Le%20Petit%20Prince%20-%202000%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20Le%20Petit%20Prince%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
 
 </div>
 </section>
 
-<!-- DEVELOPPEMENT PERSONNEL -->
+<!-- DEV PERSONNEL -->
 <section>
 <h2>🧠 Développement personnel</h2>
 <div class="grid">
-
 <div class="card">
-<img src="images/lart_de_la_guerre.jpg.png" alt="L’art de la guerre">
+<img src="images/lart_de_la_guerre.jpg.png">
 <div class="content">
 <h3>L’art de la guerre</h3>
 <p class="price">3000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L%E2%80%99art%20de%20la%20guerre%20-%203000%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%E2%80%99art%20de%20la%20guerre%20-%203000%20FCFA">Commander</a>
 </div>
 </div>
-
 </div>
 </section>
 
@@ -189,16 +172,14 @@ footer{
 <section>
 <h2>📘 Manuels</h2>
 <div class="grid">
-
 <div class="card">
-<img src="images/l_essentiel_en_cm.jpg.png" alt="L’essentiel en CM">
+<img src="images/l_essentiel_en_cm.jpg.png">
 <div class="content">
 <h3>L’essentiel en CM</h3>
 <p class="price">2000 FCFA</p>
-<a class="btn" href="https://wa.me/22676599701?text=Bonjour,%20je%20souhaite%20commander%20L%E2%80%99essentiel%20en%20CM%20-%202000%20FCFA">Commander</a>
+<a class="btn" href="https://wa.me/22676599701?text=Bonjour%2C%20je%20souhaite%20commander%20L%E2%80%99essentiel%20en%20CM%20-%202000%20FCFA">Commander</a>
 </div>
 </div>
-
 </div>
 </section>
 
