--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ footer{
 </div>
 
 <div class="card">
-<img src="images/l-aventure_albaraka_ii.jpg.jpg">
+<img src="images/laventure_albaraka_ii.jpg">
 <div class="content">
 <h3>L’aventure Albaraka II</h3>
 <p class="price">1500 FCFA</p>
@@ -173,7 +173,7 @@ footer{
 <h2>📘 Manuels</h2>
 <div class="grid">
 <div class="card">
-<img src="images/l_essentiel_en_cm.jpg.png">
+<img src="images/lessentiel_cm.png">
 <div class="content">
 <h3>L’essentiel en CM</h3>
 <p class="price">2000 FCFA</p>
