--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ footer{
 <h2>📘 Manuels</h2>
 <div class="grid">
 <div class="card">
-<img src="images/l_essentiel_en_cm.jpg.png" alt="L’essentiel en CM">
+<img src="images/ lessentiel_cm.jpg" alt=" lessentiel_cm.jpg">
 <div class="content">
 <h3>L’essentiel en CM</h3>
 <p class="price">2000 FCFA</p>
